syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message GCHLPKDADJB {
	uint32 GBJNMLBBOEJ = 1;
	uint32 max_score = 2;
}
